--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@ dist-ssr
 *.sw?
 
 public
+
+kimnambin.github.io_2024-10-18_12-59-38.report.html
+kimnambin.github.io_2024-10-18_14-11-28.report.html
