--- a/package.json
+++ b/package.json
@@ -32,5 +32,5 @@
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
   },
-  "homepage": "https://kimnambin.github.io/My_Portfolio/"
+  "homepage": "https://github.com/kimnambin.github.io/My_Portfolio/"
 }
